--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
 		<link rel="icon" href="/sveltekit-gh-pages/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="/sveltekit-gh-pages/_app/immutable/assets/_layout-569289f5.css" rel="stylesheet">
+		<link href="/sveltekit-gh-pages/_app/immutable/assets/_layout-037b29a2.css" rel="stylesheet">
 		<link href="/sveltekit-gh-pages/_app/immutable/assets/_page-c361317c.css" rel="stylesheet">
-		<link rel="modulepreload" href="/sveltekit-gh-pages/_app/immutable/start-51fcec77.js">
+		<link rel="modulepreload" href="/sveltekit-gh-pages/_app/immutable/start-d99d0966.js">
 		<link rel="modulepreload" href="/sveltekit-gh-pages/_app/immutable/chunks/index-eba7a415.js">
 		<link rel="modulepreload" href="/sveltekit-gh-pages/_app/immutable/chunks/singletons-bdb35b58.js">
 		<link rel="modulepreload" href="/sveltekit-gh-pages/_app/immutable/chunks/shared-23917130.js">
-		<link rel="modulepreload" href="/sveltekit-gh-pages/_app/immutable/components/pages/_layout.svelte-708bde60.js">
+		<link rel="modulepreload" href="/sveltekit-gh-pages/_app/immutable/components/pages/_layout.svelte-05d20c35.js">
 		<link rel="modulepreload" href="/sveltekit-gh-pages/_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="/sveltekit-gh-pages/_app/immutable/chunks/_layout-da46b06b.js">
 		<link rel="modulepreload" href="/sveltekit-gh-pages/_app/immutable/components/pages/_page.svelte-1254d2f8.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
+
+
 
 
 <div class="flex flex-col h-screen"><header class="sticky top-0 z-50"><nav class="bg-white dark:bg-gray-900 text-gray-700 dark:text-gray-200 border-gray-100 dark:border-gray-700 font-rubik px-2 sm:px-4 py-2.5 border-b border-b-2 bg-gradient-to-r from-violet-200 via-red-200 to-orange-100"><div class="mx-auto flex flex-wrap justify-between items-center  container"><a href="/sveltekit-gh-pages/" class="flex items-center"><img src="/sveltekit-gh-pages/favicon.png" class="mr-3 h-10" alt="Meerkat Logo">
@@ -66,14 +68,14 @@
 <div class="font-rubik text-center py-4 bg-gradient-to-r from-violet-200 via-red-200 to-orange-100 bottom-0 sticky dark:bg-gray-900 border-t border-gray-200 dark:border-gray-600"><a href="https://github.com/robustness-gym/meerkat" class="text-gray-700 dark:text-gray-200 bg-purple-50 hover:bg-purple-200 border border-purple-200 rounded-lg p-2 shadow-lg shadow-purple-900 "><span class="text-md">🌟 us on GitHub!</span></a></div></footer></div>
 
 
-		<script type="module" data-sveltekit-hydrate="xrfpw6">
-			import { start } from "/sveltekit-gh-pages/_app/immutable/start-51fcec77.js";
+		<script type="module" data-sveltekit-hydrate="17z9wye">
+			import { start } from "/sveltekit-gh-pages/_app/immutable/start-d99d0966.js";
 
 			start({
 				env: {},
 				paths: {"assets":"/sveltekit-gh-pages","base":"/sveltekit-gh-pages"},
-				target: document.querySelector('[data-sveltekit-hydrate="xrfpw6"]').parentNode,
-				version: "1674627158920",
+				target: document.querySelector('[data-sveltekit-hydrate="17z9wye"]').parentNode,
+				version: "1674628338000",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
